--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "server",
+	"type": "module",
 	"version": "1.0.0",
 	"description": "Backend of roboshoppp",
 	"main": "app.js",
@@ -15,6 +16,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
+		"lodash": "^4.17.21",
 		"mongoose": "^8.0.3",
 		"morgan": "^1.10.0"
 	}
